--- a/web/src/index.css
+++ b/web/src/index.css
@@ -10,10 +10,15 @@ body {
   background-image: linear-gradient(62deg, #ededed 0%, #ffffff 100%);
 }
 
+.App-header img{
+  max-width: 14rem;
+  padding: 1rem;
+}
+
 .box-card {
   min-height: 25rem;
-  display:flex;
-  justify-content:center;
+  display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
